<resources>
    <!--    °-->
    <string name="app_name">Weather</string>
    <string name="mostly_cloudy">Mostly Cloudy</string>
    <string name="image_desc">image description</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="today">Today</string>
    <string name="next_7_days"><u>Next 7 days</u></string>
    <string name="location_perm_req_rationale">The application needs this permissions to work!</string>
    <string name="can_not_get_location">Update location failed</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="retry">Retry</string>
</resources>