<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:paddingTop="81dp"
        tools:context=".ui.MainActivity">

        <TextView
            android:id="@+id/tvTemperatureTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/mostly_cloudy"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivTemperatureImageDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/cloudy_sunny" />

        <TextView
            android:id="@+id/tcDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="Mon Feb 12 │ 10:00 AM"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="25°"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="56sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="H:27°"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/tvMinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="L:12°"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="18dp"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:paddingVertical="20dp"
                app:justifyContent="space_evenly">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/image_desc"
                        android:src="@drawable/visibility" />

                    <TextView
                        android:id="@+id/tvVisibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4km"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility"
                        android:textColor="@color/light_grey"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/image_desc"
                        android:src="@drawable/wind" />

                    <TextView
                        android:id="@+id/tvWindSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12km/h"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textColor="@color/light_grey"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/image_desc"
                        android:src="@drawable/humidity" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="18%"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/light_grey"
                        android:textSize="12sp" />
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            app:alignItems="center"
            app:justifyContent="space_between">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/baseline_keyboard_arrow_right_24"
                android:text="@string/next_7_days"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </com.google.android.flexbox.FlexboxLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginStart="20dp"
            android:id="@+id/rcvHourlyTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>