<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    tools:context=".ui.WeatherDailyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_desc"
                android:onClick="back"
                android:paddingVertical="8dp"
                android:paddingEnd="8dp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Thanh Ha"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="18dp"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent_dark_grey"
                android:orientation="vertical"
                android:paddingVertical="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivWeatherImageDesc"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:contentDescription="@string/image_desc"
                        android:src="@drawable/cloudy_sunny" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="56dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvWeekday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tomorrow"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="_ _"
                            android:textColor="@color/white"
                            android:textSize="36sp" />

                        <TextView
                            android:id="@+id/tvTempMaxMin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginBottom="8dp"
                            android:text="H:_  L:_"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvWeatherTextDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="_ _ _"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.flexbox.FlexboxLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:justifyContent="space_evenly">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="@string/image_desc"
                            android:src="@drawable/visibility" />

                        <TextView
                            android:id="@+id/tvVisibility"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="_ _ km"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/visibility"
                            android:textColor="@color/light_grey"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="@string/image_desc"
                            android:src="@drawable/wind" />

                        <TextView
                            android:id="@+id/tvWindSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="_ _ km/h"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_speed"
                            android:textColor="@color/light_grey"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="@string/image_desc"
                            android:src="@drawable/humidity" />

                        <TextView
                            android:id="@+id/tvHumidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="_ _%"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textColor="@color/light_grey"
                            android:textSize="12sp" />
                    </LinearLayout>
                </com.google.android.flexbox.FlexboxLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvDailyWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:nestedScrollingEnabled="false" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            app:indicatorColor="@color/light_grey" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>